--- a/src/styles.css
+++ b/src/styles.css
@@ -115,5 +115,26 @@ main {
     background: linear-gradient(90deg, #672280 1.18%, #A626D3 100%);
     color: white;
     cursor: pointer;
-    
 }
+
+@keyframes spinner {
+    0% {
+      transform: rotate(0deg);
+    }
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+
+  .spinner-container {
+    display: flex;
+    justify-content: center;
+  }
+  .loading-spinner {
+    width: 50px;
+    height: 50px;
+    border: 10px solid #f3f3f3; /* Light grey */
+    border-top: 10px solid #672280; /* Black */
+    border-radius: 50%;
+    animation: spinner 1.5s linear infinite;
+  }
